<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.etxu_pc_windows.ggec.fragments.AddTruck">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/bg_cuarzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="32dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/gem"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cuarzo"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/descGem"/>

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/bg_kunzita"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_marginLeft="90dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:textSize="20sp"
                            android:textColor="@color/kunzita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/titlePack"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="30sp"
                                android:textColor="@color/kunzita"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="$ 160.00"/>

                            <TextView
                                android:textSize="20sp"
                                android:textColor="@color/kunzita"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4sp"
                                android:text="MXN"/>

                        </LinearLayout>

                        <TextView
                            android:textColor="@color/kunzita"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:text="Solicitud de reportes básicos Suscripción Mensual"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/precious_stone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_btnkunzita"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="8dp"
                    android:text="@string/buy"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/bg_diamante"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_marginLeft="90dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:textSize="20sp"
                            android:textColor="@color/diamante"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/titlePack"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="30sp"
                                android:textColor="@color/diamante"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="$ 160.00"/>

                            <TextView
                                android:textSize="20sp"
                                android:textColor="@color/diamante"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4sp"
                                android:text="MXN"/>

                        </LinearLayout>

                        <TextView
                            android:textColor="@color/diamante"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:text="Solicitud de reportes básicos Suscripción Mensual"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/diamond"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_btndiamante"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="8dp"
                    android:text="@string/buy"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
